After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725016 - "Open with..." opens the wrong program
"Open with..." opens the wrong program
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-02-23 21:07 UTC by Jim Hall
Modified: 2014-03-02 10:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
local-item: Get proper default app name (941 bytes, patch)
2014-02-27 18:39 UTC, Chunyang Xu
committed Details | Review

Description Jim Hall 2014-02-23 21:07:51 UTC
Using Photos 3.10 on Fedora 20 (gnome-photos-3.10.2-1.fc20.x86_64)

When I click into a photo or image to view it in Photos, then use the gear menu to open the image with another program (in this case, GIMP : "Open with GNU Image Manipulation Program") the image actually opens using Shotwell.
Comment 1 André Klapper 2014-02-24 09:45:46 UTC
Does the problem also happen in Files/Nautilus when right-clicking an image file?
Comment 2 Chunyang Xu 2014-02-27 14:28:51 UTC
I have the same issue. 

> Does the problem also happen in Files/Nautilus when right-clicking an image
> file?

No, Files works fine.
Comment 3 Chunyang Xu 2014-02-27 18:39:44 UTC
Created attachment 270502 [details] [review]
local-item: Get proper default app name

Photos try to find default application which need support URI to set the button label:
In line 88 of src/photos-local-item.c
default_app = g_app_info_get_default_for_type (mime_type, TRUE);
if TRUE, the GAppInfo is expected to support URIs.

shotwell don't support URI but gimp do, so gimp is selected even if shotwell is     the default app. I think it's safe to open local photos no matter whether default photo app support URI or not.
Comment 4 Debarshi Ray 2014-03-02 10:16:10 UTC
Review of attachment 270502 [details] [review]:

Thanks for the patch. Looks perfect.