local-item: Get the correct default app name

Disable must_support_uris flag because it is unnecessary for local
items and some photo applications like Shotwell do not support URIs.

https://bugzilla.gnome.org/show_bug.cgi?id=725016